<resources>
    <string name="app_name">PanFeed</string>
    <string name="home_title">Pandemic News</string>
    <string name="shout_out">Powered by NewsApi.org</string>
    <string name="cases_name">Country</string>
    <string name="all_deaths">Deaths</string>
    <string name="all_recovered">Recovered</string>
    <string name="all_confirmed">Confirmed</string>


    <string name="global_fragment">Global fragment</string>
    <string name="local_fragment">Local fragment</string>
    <string name="covid_keyword">corona</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flag_description">Country Flag</string>
    <string name="save_icon_title">Save</string>
    <string name="share_icon_title">Share</string>
    <string name="search_icon_title">Search</string>
    <string name="search_case_hint">Search for a Country</string>
    <string name="saved_news_title">Title</string>
    <string name="saved_news_date">Date</string>
    <string name="saved_news_image_content_description">News image</string>
    <string name="toolbar_image_description">News image</string>
    <string name="shadow_top">Image shadow top</string>
    <string name="shadow_bottom">Image shadow bottom</string>
    <string name="open_option_title">Open in Browser</string>
    <string name="local_headlines_title">Top Local Headlines Today</string>
    <string name="empty_save_text">No Saved Articles</string>
    <string name="delete_all_text">Delete All</string>

    <string name="test_ads_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_ads_native_advanced">ca-app-pub-3940256099942544/2247696110</string>
    <string name="no_data_icon">No data icon</string>


</resources>
