<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginTop="4dp"
                                   android:layout_marginBottom="2dp">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">
        <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:layout_marginEnd="@dimen/default_panfeed"
                android:id="@+id/savedImageCardView"
                app:cardCornerRadius="5dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/savedNewsImage"
                    android:src="@drawable/no_img"
                    android:scaleType="centerCrop"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/saved_news_image_content_description"/>
        </androidx.cardview.widget.CardView>
        <TextView
                android:id="@+id/savedNewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/savedImageCardView"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/saved_news_title"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        <TextView
                android:id="@+id/savedNewsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@id/savedNewsTitle"
                android:textSize="14sp"
                android:layout_toEndOf="@id/savedImageCardView"
                android:text="@string/saved_news_date"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>