<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.CasesFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/totalCardView"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/allCasesTextView"
                    android:textSize="25sp"
                    android:text="@string/all_cases"
                    android:textColor="@color/black"
                    />
            <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/grey"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmedLabel"
                        android:padding="8dp"
                        android:textSize="20dp"
                        android:text="@string/all_confirmed"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmedNumber"
                        android:padding="8dp"
                        android:textSize="20dp"
                        android:textColor="@android:color/black"
                        android:text=""/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/recoveredLabel"
                            android:padding="8dp"
                            android:textSize="16dp"
                            android:text="@string/all_recovered"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/recoveredNumber"
                            android:padding="8dp"
                            android:textSize="16dp"
                            android:textColor="@android:color/holo_green_dark"
                            android:text=""/>
                </LinearLayout>
                <View android:layout_width="1dp" android:layout_height="36dp" android:background="@color/grey"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/deathLabel"
                            android:padding="8dp"
                            android:textSize="16dp"
                            android:text="@string/all_deaths"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/deathNumber"
                            android:padding="8dp"
                            android:textSize="16dp"
                            android:textColor="@android:color/holo_red_dark"
                            android:text=""/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>




</FrameLayout>